--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,13 @@
 
 <div id="map"></div>
-<script>launchRoadTweets();</script>
+<%= requirejs_include_tag %>
+<script>
+  require.config({urlArgs: 'bust='+Date.now()});
+  require(['roadtweets/main']);
+</script>
+
+<% if signed_in? %>
+<div class="search-container">
+  <input type="search" id="search-input">
+</div>
+<% end %>
