--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,13 @@
     <title>RoadTweets</title>
     <%= stylesheet_link_tag    'application', media: 'all'  %>
     <%= csrf_meta_tags %>
+
+    <!-- TODO find a way to include leaflet stylesheet -->
+
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
   </head>
   <body>
-
-    <%= render 'common/signout' %>
-
-    <%= yield %>
-
+  <%= render 'common/signout' %>
+  <%= yield %>
   </body>
 </html>
