--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,7 +15,10 @@
 
 <% if signed_in? %>
 <div class="search-container">
-  <input type="search" id="search-input">
+  <%= form_tag({:controller=>"tweets", :action=>"index"}, method: :get) do %>
+    <%= text_field_tag :search_term %>
+    <%= submit_tag 'search for a hashtag', name: nil %>
+  <% end %>
 </div>
 <% end %>
 
