--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= stylesheet_link_tag    'application', media: 'all'  %>
     <%= csrf_meta_tags %>
 
-    <!-- TODO find a way to include leaflet stylesheet -->
+    <!-- TODO bring in leaflet stylesheet -->
 
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
   </head>
