--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,11 @@
 
+<div class="title_container">
+  <h1>
+    <div class="first"><br>W</br><br>A</br><br>Y</br><br>F</br><br>A</br><br>R</br><br>I</br><br>N</br><br>G</br></div>
+    <div class="first"><br>T</br><br id="W">W</br><br>E</br><br>E</br><br>T</br><br>S</br></div>
+  </h1>
+</div>
+
 <% if !signed_in? %>
 <div class="navigation">
   <!--TODO: fix text centering for below two buttons-->
@@ -17,10 +24,10 @@
 </script>
 
 <div class="search-container">
-  <%= form_tag({:controller=>"tweets", :action=>"index"}, id: 'search_form', method: :get) do %>
-    <%= text_field_tag :search_term %>
-    <%= submit_tag 'search for a hashtag', class: 'button search_submit', name: nil %>
-  <% end %>
+<%= form_tag({:controller=>"tweets", :action=>"index"}, id: 'search_form', method: :get) do %>
+  <%= text_field_tag :search_term %>
+  <%= submit_tag 'search for a hashtag', class: 'button search_submit', name: nil %>
+<% end %>
 </div>
 
 
