--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,8 +25,8 @@
 
 <div class="search-container">
 <%= form_tag({:controller=>"tweets", :action=>"index"}, id: 'search_form', method: :get) do %>
-  <%= text_field_tag :search_username %>
-  <%= text_field_tag :search_hashtag %>
+  <%= text_field_tag :search_username, nil, placeholder: 'username' %>
+  <%= text_field_tag :search_hashtag, nil, placeholder: 'hashtag' %>
   <%= submit_tag 'search for a trip', class: 'button search_submit', name: nil %>
 <% end %>
 </div>
