--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,6 @@
 
+<h1 class="feedback"></h1>
+
 <% if !signed_in? %>
 <div class="navigation">
   <!--TODO: fix text centering for below two buttons-->
