--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RoadTweets</title>
+    <title>Wayfaring-Tweets</title>
     <%= stylesheet_link_tag    'application', media: 'all'  %>
     <%= csrf_meta_tags %>
 
     <!-- TODO bring in leaflet stylesheet -->
+    <!-- TODO add favicon -->
 
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
   </head>
